[tool.poetry]
name = "vits"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "*"
Cython = "^0.29.32"
librosa = "*"
matplotlib = "*"
phonemizer = "*"
scipy = "*"
tensorboard = "*"
torch = "*"
torchvision = "*"
Unidecode = "*"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.3"
black = {version = "^22.8.0", allow-prereleases = true}
flake8 = "^5.0.4"
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "numpy", "Cython >= 0.29.32"]
build-backend = "poetry.core.masonry.api"
